add jquery cdn 'modified' type and start working with api in script.js

--- a/making-some-changes/JSON/projects.json
+++ b/making-some-changes/JSON/projects.json
@@ -1,50 +1,51 @@
-{"projects":[
-    {
-        "id":1,
-        "category":"design",
-        "img":"../img/project/posterNA1.jpg",
-        "caption":"This pandemic-themed pamphlet won first place in a pamphlet design competition at a regional organization event in 2020, created using Adobe Illustrator.",
-        "linkProject":"-",
-        "linkDocumentation":"-"
-    },
-    {
-        "id":2,
-        "category":"design",
-        "img":"../img/project/posterNA2.jpg",
-        "caption":"This second pamphlet won first place in a pamphlet design competition at a regional organization event in 2020, created using Adobe Illustrator.",
-        "linkProject":"-",
-        "linkDocumentation":"-"
-    },
-    {
-        "id":3,
-        "category":"website",
-        "img":"../img/project/personalwebv1.jpg",
-        "caption":"My first personal website for college assignment created using HTML, CSS, and Bootstrap.",
-        "linkProject":"https://ginacu.github.io/gina-s-personal-web-v1/",
-        "linkDocumentation":"https://github.com/ginacu/gina-s-personal-web-v1"
-    },
-    {
-        "id":4,
-        "category":"design",
-        "img":"../img/project/halalbihalal.jpg",
-        "caption":"Poster for an event on Eid Al-Fitr in 2023, this poster was made using Adobe Illustrator.",
-        "linkProject":"-",
-        "linkDocumentation":"-"
-    },
-    {
-        "id":5,
-        "category":"website",
-        "img":"../img/project/suitgames.jpg",
-        "caption":"Suit Games Website (Rock-Paper-Scissor Games in Java's style) created using HTML, CSS, and Javascript",
-        "linkProject":"https://ginacu.github.io/website_suit_games/",
-        "linkDocumentation":"https://github.com/ginacu/website_suit_games"
-    },
-    {
-        "id":6,
-        "category":"website",
-        "img":"../img/project/bestbuymarket.jpg",
-        "caption":"Best Buy Market Website, created using HTML, CSS, BootStrap, Javascript, and JQuery",
-        "linkProject":"https://ginacu.github.io/best-buy-market-website/",
-        "linkDocumentation":"https://github.com/ginacu/best-buy-market-website"
-    }   
+{
+    "projects": [
+        {
+            "id":1,
+            "category":"design",
+            "img":"../img/project/posterNA1.jpg",
+            "caption":"This pandemic-themed pamphlet won first place in a pamphlet design competition at a regional organization event in 2020, created using Adobe Illustrator.",
+            "linkProject":"-",
+            "linkDocumentation":"-"
+        },
+        {
+            "id":2,
+            "category":"design",
+            "img":"../img/project/posterNA2.jpg",
+            "caption":"This second pamphlet won first place in a pamphlet design competition at a regional organization event in 2020, created using Adobe Illustrator.",
+            "linkProject":"-",
+            "linkDocumentation":"-"
+        },
+        {
+            "id":3,
+            "category":"website",
+            "img":"../img/project/personalwebv1.jpg",
+            "caption":"My first personal website for college assignment created using HTML, CSS, and Bootstrap.",
+            "linkProject":"https://ginacu.github.io/gina-s-personal-web-v1/",
+            "linkDocumentation":"https://github.com/ginacu/gina-s-personal-web-v1"
+        },
+        {
+            "id":4,
+            "category":"design",
+            "img":"../img/project/halalbihalal.jpg",
+            "caption":"Poster for an event on Eid Al-Fitr in 2023, this poster was made using Adobe Illustrator.",
+            "linkProject":"-",
+            "linkDocumentation":"-"
+        },
+        {
+            "id":5,
+            "category":"website",
+            "img":"../img/project/suitgames.jpg",
+            "caption":"Suit Games Website (Rock-Paper-Scissor Games in Java's style) created using HTML, CSS, and Javascript",
+            "linkProject":"https://ginacu.github.io/website_suit_games/",
+            "linkDocumentation":"https://github.com/ginacu/website_suit_games"
+        },
+        {
+            "id":6,
+            "category":"website",
+            "img":"../img/project/bestbuymarket.jpg",
+            "caption":"Best Buy Market Website, created using HTML, CSS, BootStrap, Javascript, and JQuery",
+            "linkProject":"https://ginacu.github.io/best-buy-market-website/",
+            "linkDocumentation":"https://github.com/ginacu/best-buy-market-website"
+        }   
 ]}
